--- a/KoeBook/Views/MainPage.xaml
+++ b/KoeBook/Views/MainPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page
+<Page
     x:Class="KoeBook.Views.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -6,7 +6,9 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid x:Name="ContentArea">
-        
+    <Grid x:Name="ContentArea" Padding="10">
+        <Grid>
+            <TextBlock Text="aaaaaaaa"/>
+        </Grid>
     </Grid>
 </Page>
