--- a/KoeBook/Views/MainPage.xaml
+++ b/KoeBook/Views/MainPage.xaml
@@ -12,50 +12,83 @@
         ZoomMode="Disabled"
         HorizontalScrollMode="Disabled">
         <StackPanel>
+            <Grid
+                ColumnSpacing="8">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="240" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
 
-            <TextBlock
-                Style="{StaticResource TitleTextBlockStyle}"
-                Text="書籍選択"/>
-
-            <StackPanel
-                Background="{ThemeResource CardBackgroundFillColorDefault}"
-                BorderBrush="{ThemeResource CardStrokeColorDefault}"
-                BorderThickness="1"
-                Padding="24,16,24,16"
-                CornerRadius="12"
-                Margin="{StaticResource SmallTopMargin}"
-                HorizontalAlignment="Stretch">
-
-                <StackPanel>
-                    <TextBlock Text="EPubファイルを読み上げる"/>
-                    <StackPanel Orientation="Horizontal" Margin="{StaticResource XSmallTopMargin}">
-                        <Button
-                            Command="{x:Bind ViewModel.OpenEBookFileCommand}"
-                            Content="ファイルを選択する"/>
-                        <TextBlock
-                            VerticalAlignment="Center"
-                            Padding="30,0,0,0"
-                            TextWrapping="Wrap"
-                            Style="{StaticResource BodyTextStyle}"
-                            Text="{x:Bind ViewModel.EbookFileName, Mode=OneWay}"/>
-                    </StackPanel>
-                </StackPanel>
+                <TextBlock
+                    Style="{StaticResource TitleTextBlockStyle}"
+                    Text="書籍選択"/>
 
                 <StackPanel
-                        Margin="{StaticResource SmallTopBottomMargin}">
-                    <TextBlock Text="外部サイトを読み上げる (未対応)"/>
-                    <TextBox
-                        Text="{x:Bind ViewModel.EbookUrl, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                        BeforeTextChanging="{x:Bind ViewModel.BeforeTextChanging}"
-                        Margin="{StaticResource XSmallTopMargin}" />
+                    Grid.Row="1"
+                    Background="{ThemeResource CardBackgroundFillColorDefault}"
+                    BorderBrush="{ThemeResource CardStrokeColorDefault}"
+                    BorderThickness="1"
+                    Padding="24,16,24,16"
+                    CornerRadius="12"
+                    Margin="{StaticResource SmallTopMargin}"
+                    HorizontalAlignment="Stretch">
+
+                    <!--TODO:EPUB対応
+                    <StackPanel>
+                        <TextBlock Text="EPubファイルを読み上げる"/>
+                        <StackPanel Orientation="Horizontal" Margin="{StaticResource XSmallTopMargin}">
+                            <Button
+                                Command="{x:Bind ViewModel.OpenEBookFileCommand}"
+                                Content="ファイルを選択する"/>
+                            <TextBlock
+                                VerticalAlignment="Center"
+                                Padding="30,0,0,0"
+                                TextWrapping="Wrap"
+                                Style="{StaticResource BodyTextStyle}"
+                                Text="{x:Bind ViewModel.EbookFileName, Mode=OneWay}"/>
+                        </StackPanel>
+                    </StackPanel>-->
+
+                    <StackPanel>
+                        <TextBlock Text="青空文庫を読み上げる"/>
+                        <TextBox
+                            Text="{x:Bind ViewModel.EbookUrl, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                            BeforeTextChanging="{x:Bind ViewModel.BeforeTextChanging}"
+                            Margin="{StaticResource XSmallTopMargin}" />
+                    </StackPanel>
+
+                    <Button
+                        Style="{StaticResource AccentButtonStyle}"
+                        Margin="{StaticResource SmallTopMargin}"
+                        Command="{x:Bind ViewModel.StartProcessCommand}"
+                        Content="読み上げを作成" />
                 </StackPanel>
 
-                <Button
-                    Style="{StaticResource AccentButtonStyle}"
-                    Margin="{StaticResource SmallTopMargin}"
-                    Command="{x:Bind ViewModel.StartProcessCommand}"
-                    Content="読み上げを作成" />
-            </StackPanel>
+                <TextBlock
+                    Grid.Column="1"
+                    Style="{StaticResource SubtitleTextBlockStyle}"
+                    VerticalAlignment="Bottom"
+                    Text="オプション" />
+
+                <StackPanel
+                    Grid.Column="1"
+                    Grid.Row="1"
+                    Background="{ThemeResource CardBackgroundFillColorDefault}"
+                    BorderBrush="{ThemeResource CardStrokeColorDefault}"
+                    BorderThickness="1"
+                    Padding="24,16,24,16"
+                    CornerRadius="12"
+                    Margin="{StaticResource SmallTopMargin}">
+                    <ToggleSwitch
+                        IsOn="{x:Bind ViewModel.SkipEdit, Mode=TwoWay}"
+                        OffContent="編集する"
+                        OnContent="編集をスキップする"/>
+                </StackPanel>
+            </Grid>
 
             <StackPanel
                 Margin="{StaticResource MediumTopMargin}">
